# ys_ahk

./: .gitignore  README.md  autocook.ini  autocook.py  basic.ahk  build.bat  counter.ahk  index.html  requirements.txt  server.py  startcook.bat  yuanshen.ahk
ahk/: api.ahk  basic.ahk  counter.ahk  gui.ahk  lib.ahk  uid.ahk  yuanshen.ahk  yuanshen_c.ahk  yuanshen_h.ahk
app/: bun.lockb  index.html  package.json  vite.config.ts
app/public/i18n/zh-CN/: translation.json
app/src/: App.vue  components.d.ts  env.ts  main.ts  router.ts  schema.json  style.css
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  util.rs
app/src-tauri/src/services/game/: mod.rs  util.rs
app/src/components/: ChatRoom.vue  CheckAnimationButton.vue  Dialog.vue  Dropdown.vue  GQAutoPage.vue  GQQuery.vue  Icon.vue  Popover.vue  QQAvatar.vue  ResizeableWindow.vue  ScrollArea.vue  Sidebar.vue
app/src/components/select/: Select.vue
app/src/mod/db/: index.ts  types.ts
app/src/mod/http/: graphql.ts  room.ts  ws.ts
app/src/mod/state/: game.ts  index.ts  setting.ts  statistics.ts  ui.ts
app/src/mod/util/: html.ts
app/src/util/: invoke.ts
app/src/views/: Chat.vue  ChatRoom.vue  Game.vue  Home.vue  Room.vue  Setting.vue  User.vue
client/: Cargo.toml  config.yml
client/src/: build.rs  config.rs  cooker.rs  game.rs  main.rs  ocr.rs  paddleocr.rs  util.rs
py/: autocook.ini  autocook.py  build.bat  startcook.bat
server/: .prettierrc  bun.lockb  package.json  pnpm-lock.yaml  server.py  server.ts
server/browser_src/: denoise.ts  index.js
server/browser_src/util/: html.ts
server/drizzle/: 0000_amusing_union_jack.sql  0000_omniscient_moon_knight.sql  0000_opposite_gabe_jones.sql
server/drizzle/meta/: 0000_snapshot.json  _journal.json
server/public/: index.html
server/public/css/: index.css
server/public/js/: denoise.js  index.js
server/src/: build.ts  hot.ts  index.ts  room.ts  ws.ts
server/src/db/: index.ts  migrate.ts  schema.ts  yoga.ts
server/src/db/mod/: index.ts  message.ts  room.ts  user.ts
server/src/rt/: pubsub.ts  room.ts  ws.ts
server/static/: index.html
